--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>WEB1 - JAvascript</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -13,6 +13,6 @@
   </ol>
   <h2>JAvascript</h2>
 
-  <p>this is javascript paragraph</p>
+  <p>this is javascript page</p>
 </body>
 </html>
