--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - html</title>
+  <title>WEB1 - HTML</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -12,10 +12,9 @@
     <li><a href="3.html">Jvascript</a></li>
   </ol>
   <h2>HTML</h2>
-  hello, welcome to visit my blog web page.
-  I hope you enjoy!
   please <a href = "https://www.w3.org/TR/2011/WD-html5-20110405/" target = "_blank" title = "html5"><strong> <u>click this letter</u></strong></a> if you want to read more about my postings.
   <br>
   <img src="moon.jpg" width = "100">
-  <p>this is first paragraph</p>
+  <p>this is HTML page</p>
 </body>
+</html>
