--- a/2.html
+++ b/2.html
@@ -12,6 +12,6 @@
     <li><a href="3.html">Jvascript</a></li>
   </ol>
   <h2>CSS</h2>
-  <p>this is CSS paragraph</p>
+  <p>this is CSS page</p>
 </body>
 </html>
