--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <li><a href="3.html">Jvascript</a></li>
   </ol>
   <h2>Web</h2>
-
-  <p>this is Welcome web paragraph</p>
+  hello, welcome to visit my seb page
+  <p>this is Welcome page</p>
 </body>
 </html>
